# cfdb-vars

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  documentation.yml  test.yml
cfdb_vars/: __init__.py  coord_vars.py  data_vars.py  time_dtype_params.py
cfdb_vars/tests/: test_coord_vars.py  test_data_vars.py  test_exports.py
conda/: meta.yaml
docs/reference/: cfdb_vars.md
odm2/: odm2_variable_names.csv  odm2_variable_types.csv
